Fix width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@ body{
 
 #selectButton{
     margin: auto;
-     max-width: 25em;
+    max-width: 100%;
 }
 
 .fullArea{
     position:absolute;
     z-index: 0;
-    width:100%;
+    width: 100%;
     height: 100%;
 }
 
@@ -24,7 +24,7 @@ body{
     will-change: transform;
     z-index: 10;
     margin: auto;
-    max-width: 25em;
+    max-width: 100%;
     animation-name: maximize;
     animation-duration: 1s;
     animation-fill-mode: forwards;
@@ -46,5 +46,14 @@ body{
     }
     to {
         transform: translateY(0);
+    }
+}
+
+@media (min-width: 400px) {
+    #selectButton {
+        max-width: 400px;
+    }
+    .fileSelector {
+        max-width: 400px;
     }
 }
